--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'>
 
 	<title>Hear.com: The Best Hearing Aids &amp; Care For Hearing Loss | No-Risk Trial</title>
@@ -68,7 +68,7 @@
                             <button type="button" class="previous-btn"><img src="./images/arrow-left.png" alt="arrow left"/></button>    
                         </div>
                         <div class="next-arrow">
-                            <button type="button" class="next-btn"><img src="./images/arrow-right.png"/></button> 
+                            <button type="button" class="next-btn"><img src="./images/arrow-right.png"  alt="arrow left"/></button> 
                         </div>
                         <div class="btn-center">
                             <button id="btn" type="button" class="next-btn">Next</button> 
