--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 
 	<title>Hear.com: The Best Hearing Aids &amp; Care For Hearing Loss | No-Risk Trial</title>
 	<meta name="description" content="Hearing aids by the leading manufacturers ✔ Free consultation with hearing aid experts ✔ Personalized support in your local area ✔ no-risk hearing aid trial" />
+    <script crossorigin="anonymous" src="https://polyfill.io/v2/polyfill.js?features=default%2Ces5"></script>
 </head>
 <body class="hide-native-scrollbar">
 
@@ -64,13 +65,13 @@
                                 <label for="step_one_d" class="label-class">I’ve been too busy</label>
                             </div>
                         </div>
-                        <div class="previous-arrow avoid-clicks">
-                            <button type="button" class="previous-btn"><img src="./images/arrow-left.png" alt="arrow left"/></button>    
+                        <div class="previous-arrow avoid-clicks dev-previous-btn">
+                            <button type="button" class="previous-btn"><img src="./images/arrow-left.png" alt="arrow left"/></button>
                         </div>
-                        <div class="next-arrow">
+                        <div class="next-arrow dev-next-btn">
                             <button type="button" class="next-btn"><img src="./images/arrow-right.png"  alt="arrow left"/></button> 
                         </div>
-                        <div class="btn-center">
+                        <div class="btn-center dev-next-btn">
                             <button id="btn" type="button" class="next-btn">Next</button> 
                         </div>
                     </div>
@@ -79,32 +80,32 @@
                         <h3>How old are your hearing aids?</h3>
 
                         <div class="m-center">
-                        <div class="form-group">
-                            <input type="radio" id="step_two_a" name="old" value="2 years old or less">
-                            <label for="step_two_a" class="label-class">2 years old or less</label>
-                        </div>
-                        <div class="form-group">
-                            <input type="radio" id="step_two_b" name="old" value="3 years old">
-                            <label for="step_two_b" class="label-class">3 years old</label>
-                        </div>
-                        <div class="form-group">
-                            <input type="radio" id="step_two_c" name="old" value="4 years old">
-                            <label for="step_two_c" class="label-class">4 years old</label>
-                        </div>
-                        <div class="form-group">
-                            <input type="radio" id="step_two_d" name="old" value="5 years old or more">
-                            <label for="step_two_d" class="label-class">5 years old or more</label>
-                        </div>
+                            <div class="form-group">
+                                <input type="radio" id="step_two_a" name="old" value="2 years old or less">
+                                <label for="step_two_a" class="label-class">2 years old or less</label>
+                            </div>
+                            <div class="form-group">
+                                <input type="radio" id="step_two_b" name="old" value="3 years old">
+                                <label for="step_two_b" class="label-class">3 years old</label>
+                            </div>
+                            <div class="form-group">
+                                <input type="radio" id="step_two_c" name="old" value="4 years old">
+                                <label for="step_two_c" class="label-class">4 years old</label>
+                            </div>
+                            <div class="form-group">
+                                <input type="radio" id="step_two_d" name="old" value="5 years old or more">
+                                <label for="step_two_d" class="label-class">5 years old or more</label>
+                            </div>
                         </div>
 
 
-                        <div class="previous-arrow">
+                        <div class="previous-arrow dev-previous-btn">
                             <button type="button" class="previous-btn"><img src="./images/arrow-left.png" alt="arrow left"/></button>    
                         </div>
-                        <div class="next-arrow">
+                        <div class="next-arrow dev-next-btn">
                             <button type="button" class="next-btn"><img src="./images/arrow-right.png" alt="arrow right"/></button> 
                         </div>
-                        <div class="btn-center">
+                        <div class="btn-center dev-next-btn">
                             <button type="button" class="next-btn">Next</button> 
                         </div>
                     </div>
@@ -113,32 +114,32 @@
                         <h3>How much does hearing loss restrict you in your daily life?</h3>
 
                         <div class="m-center">
-                        <div class="form-group">
-                            <input type="radio" id="step_three_a" name="daily-life" value="Not at all">
-                            <label for="step_three_a" class="label-class">Not at all</label>
-                        </div>
-                        <div class="form-group">
-                            <input type="radio" id="step_three_b" name="daily-life" value="Barely">
-                            <label for="step_three_b" class="label-class">Barely</label>
-                        </div>
-                        <div class="form-group">
-                            <input type="radio" id="step_three_c" name="daily-life" value="Moderately">
-                            <label for="step_three_c" class="label-class">Moderately</label>
-                        </div>
-                        <div class="form-group">
-                            <input type="radio" id="step_three_d" name="daily-life" value="Severely">
-                            <label for="step_three_d" class="label-class">Severely</label>
-                        </div>
+                            <div class="form-group">
+                                <input type="radio" id="step_three_a" name="daily-life" value="Not at all">
+                                <label for="step_three_a" class="label-class">Not at all</label>
+                            </div>
+                            <div class="form-group">
+                                <input type="radio" id="step_three_b" name="daily-life" value="Barely">
+                                <label for="step_three_b" class="label-class">Barely</label>
+                            </div>
+                            <div class="form-group">
+                                <input type="radio" id="step_three_c" name="daily-life" value="Moderately">
+                                <label for="step_three_c" class="label-class">Moderately</label>
+                            </div>
+                            <div class="form-group">
+                                <input type="radio" id="step_three_d" name="daily-life" value="Severely">
+                                <label for="step_three_d" class="label-class">Severely</label>
+                            </div>
                         </div>
 
 
-                        <div class="previous-arrow">
+                        <div class="previous-arrow dev-previous-btn">
                             <button type="button" class="previous-btn"><img src="./images/arrow-left.png" alt="arrow left"/></button>    
                         </div>
-                        <div class="next-arrow">
+                        <div class="next-arrow dev-next-btn">
                             <button type="button" class="next-btn"><img src="./images/arrow-right.png" alt="arrow right"/></button> 
                         </div>
-                        <div class="btn-center">
+                        <div class="btn-center dev-next-btn">
                             <button type="button" class="next-btn">Next</button> 
                         </div>
                     </div>
@@ -147,32 +148,32 @@
                         <h3>When do you want to improve your hearing?</h3>
 
                         <div class="m-center">
-                        <div class="form-group">
-                            <input type="radio" id="step_four_a" name="improve" value="As soon as possible">
-                            <label for="step_four_a" class="label-class">As soon as possible</label>
-                        </div>
-                        <div class="form-group">
-                            <input type="radio" id="step_four_b" name="improve" value="Within the next few weeks">
-                            <label for="step_four_b" class="label-class">Within the next few weeks</label>
-                        </div>
-                        <div class="form-group">
-                            <input type="radio" id="step_four_c" name="improve" value="Within the next few months">
-                            <label for="step_four_c" class="label-class">Within the next few months</label>
-                        </div>
-                        <div class="form-group">
-                            <input type="radio" id="step_four_d" name="improve" value="I don't know">
-                            <label for="step_four_d" class="label-class">I don't know</label>
-                        </div>
+                            <div class="form-group">
+                                <input type="radio" id="step_four_a" name="improve" value="As soon as possible">
+                                <label for="step_four_a" class="label-class">As soon as possible</label>
+                            </div>
+                            <div class="form-group">
+                                <input type="radio" id="step_four_b" name="improve" value="Within the next few weeks">
+                                <label for="step_four_b" class="label-class">Within the next few weeks</label>
+                            </div>
+                            <div class="form-group">
+                                <input type="radio" id="step_four_c" name="improve" value="Within the next few months">
+                                <label for="step_four_c" class="label-class">Within the next few months</label>
+                            </div>
+                            <div class="form-group">
+                                <input type="radio" id="step_four_d" name="improve" value="I don't know">
+                                <label for="step_four_d" class="label-class">I don't know</label>
+                            </div>
                         </div>
 
 
-                        <div class="previous-arrow">
+                        <div class="previous-arrow dev-previous-btn">
                             <button type="button" class="previous-btn"><img src="./images/arrow-left.png" alt="arrow left"/></button>    
                         </div>
-                        <div class="next-arrow">
+                        <div class="next-arrow dev-next-btn">
                             <button type="button" class="next-btn"><img src="./images/arrow-right.png" alt="arrow right"/></button> 
                         </div>
-                        <div class="btn-center">
+                        <div class="btn-center dev-next-btn">
                             <button type="button" class="next-btn">Next</button> 
                         </div>
                     </div>
@@ -182,29 +183,29 @@
                         <h3>What is your current employment status?</h3>
 
                         <div class="m-center">
-                        <div class="form-group">
-                            <input type="radio" id="step_five_a" name="status" value="Employed">
-                            <label for="step_five_a" class="label-class">Employed</label>
-                        </div>
-                        <div class="form-group">
-                            <input type="radio" id="step_five_b" name="status" value="Unemployed">
-                            <label for="step_five_b" class="label-class">Unemployed</label>
-                        </div>
-                        <div class="form-group">
-                            <input type="radio" id="step_five_c" name="status" value="Retired">
-                            <label for="step_five_c" class="label-class">Retired</label>
-                        </div>
-                        <div class="form-group">
-                            <input type="radio" id="step_five_d" name="status" value="Homemaker">
-                            <label for="step_five_d" class="label-class">Homemaker</label>
-                        </div>
+                            <div class="form-group">
+                                <input type="radio" id="step_five_a" name="status" value="Employed">
+                                <label for="step_five_a" class="label-class">Employed</label>
+                            </div>
+                            <div class="form-group">
+                                <input type="radio" id="step_five_b" name="status" value="Unemployed">
+                                <label for="step_five_b" class="label-class">Unemployed</label>
+                            </div>
+                            <div class="form-group">
+                                <input type="radio" id="step_five_c" name="status" value="Retired">
+                                <label for="step_five_c" class="label-class">Retired</label>
+                            </div>
+                            <div class="form-group">
+                                <input type="radio" id="step_five_d" name="status" value="Homemaker">
+                                <label for="step_five_d" class="label-class">Homemaker</label>
+                            </div>
                         </div>
 
-                        <div class="previous-arrow">
+                        <div class="previous-arrow dev-previous-btn">
                             <button type="button" class="previous-btn"><img src="./images/arrow-left.png" alt="arrow left"/></button>    
                         </div>
 
-                        <div class="btn-center">
+                        <div class="btn-center dev-next-btn">
                             <button type="submit" class="next-btn submit-btn">Submit</button> 
                         </div>
                     </div>
@@ -235,8 +236,6 @@
             </div>
         </section>
     </div>
-
-    <script src="./index.js"></script>
-
+	<script src="./index.js"></script>
 </body>
 </html>
